support mulit-language and conversationWindowMemory